<resources>
    <string name="app_name">LearningProject</string>
    <string name="java_call_js">javascript:callJs(\"%1$s\");</string>
    <string name="go_to_normal">go to NormalActivity</string>
    <string name="go_to_dialog">go to DialogActivity</string>
    <string name="linear_layout">这部分是LinearLayout:</string>
    <string name="linear_weight_bisection">这里是使用weight平分</string>
    <string name="linear_weight_fill_other_area">这里是EditText填充剩余部分</string>
    <string name="button_length_fixed">长度固定</string>
    <string name="constraint_layout">这部分是ConstraintLayout：</string>
    <string name="text_view_first">TextView1</string>
    <string name="text_view_second">TextView2</string>
    <string name="text_view_third">TextView3</string>
    <string name="text_view_circle_angle_location">这个是角度定位</string>
    <string name="normal_list_view">ListView简单使用</string>
    <string name="custom_list_view_adapter">自定义adapter</string>
    <string name="text_button">Button</string>
    <string name="normal_fragment">This is right fragment</string>
    <string name="text_normal_fragment">直接在layout中引用fragment</string>
    <string name="text_dynamic_add_fragment">动态添加fragment</string>
    <string name="text_qualifiers_fragment">通过限定符决定加载单页/双页</string>
    <string name="text_dynamic_register_broad_cast_receiver">监听网络变化:动态注册广播接收器</string>
    <string name="text_send_custom_broadcast">发送自定义广播</string>
    <string name="text_send_custom_standard_broadcast">发送标准广播</string>
    <string name="text_send_custom_orderly_broadcast">发送有序广播</string>
    <string name="text_send_local_broadcast">发送本地广播</string>
    <string name="text_memory_data_by_file">将数据存储在文件中</string>
    <string name="text_memory_data_in_internal_storage">将数据存储在内部存储中</string>
    <string name="text_memory_data_in_external_storage">将数据存储在外部存储中</string>
    <string name="text_read_memory_data_from_internal_storage">从内部存储中读取文件</string>
    <string name="text_read_memory_data_from_external_storage">从外部存储中读取文件</string>
    <string name="text_memory_data_by_shared_preference">通过SharedPreferences保存数据</string>
    <string name="text_read_data_from_shared_preferneces">读取数据</string>
    <string name="text_create_sql">创建数据库</string>
    <string name="text_upgrade_sql">更新数据库</string>
    <string name="text_add_data">添加数据</string>
    <string name="text_update_data">更新数据</string>
    <string name="text_delete_data">删除数据</string>
    <string name="text_select_data">查找数据</string>
    <string name="text_add_data_by_sql">通过sql语句添加数据</string>
    <string name="text_update_data_by_sql">通过sql语句更新数据</string>
    <string name="text_delete_data_by_sql">通过sql语句删除数据</string>
    <string name="text_select_data_by_sql">通过sql语句查找数据</string>
    <string name="text_memory_data_by_sql">将数据存储在数据库中</string>
    <string name="text_memory_data_by_lite_pal">通过LitePal将数据存储在数据库中</string>
    <string name="text_dynamic_apply_permission">动态申请权限</string>
    <string name="text_button_xml_menu">使用xml构建普通选项menu</string>
    <string name="text_button_java_menu">使用java代码构建普通选项menu</string>
    <string name="text_button_normal_fragment_menu">在fragment中构建普通选项menu</string>
    <string name="text_button_context_menu">上下文菜单</string>
    <string name="text_button_popup_menu">弹出菜单</string>
    <string name="text_button_long_click_show_context_menu">长按弹出上下文菜单</string>
    <string name="text_button_click_show_popup_menu">点击展示弹出菜单</string>
    <string name="text_button_read_system_contacts">读取系统联系人</string>
    <string name="text_button_get_data_from_other_app">与其他应用进行数据交换</string>
    <string name="text_button_send_notification">发送通知</string>
    <string name="text_button_use_mobile_multimedia">运用手机多媒体</string>
    <string name="text_choose_picture_and_camera">拍照及选择图片</string>
    <string name="text_camera">拍照</string>
    <string name="text_choose_photo">选择照片</string>
    <string name="text_play">播放</string>
    <string name="text_stop">停止</string>
    <string name="text_pause">暂停</string>
    <string name="text_reset">重播</string>
    <string name="text_play_audio">播放音频</string>
    <string name="text_play_video">播放视频</string>
    <string name="text_put_serializable">使用Serializable接口实现传递自定义数据</string>
    <string name="text_put_parcelable">使用parcelable接口实现传递自定义数据</string>
    <string name="text_http_url_connection">HttpURLConnection</string>
    <string name="text_ok_http">OkHttp</string>
    <string name="text_pull_parse_xml">使用Pull解析xml</string>
    <string name="text_sax_parse_xml">使用SAX解析xml</string>
    <string name="text_location">定位</string>
    <string name="text_baidu_map">地图</string>
    <string name="text_asynchronization_thread">异步消息处理机制</string>
    <string name="text_async_task">通过AsyncTask实现异步消息处理</string>
    <string name="text_service">Service</string>
    <string name="text_start">开始</string>
    <string name="text_bind_service">绑定service</string>
    <string name="text_unbind_service">解绑service</string>
    <string name="front_desk_service">前台service</string>
    <string name="text_intent_service">通过IntentService实现Service</string>
    <string name="text_tool_bar_activity">Toolbar</string>
    <string name="text_suspend_button">悬浮按钮</string>
    <string name="text_drawer_layout">DrawerLayout</string>
    <string name="text_card_view">CardView</string>
    <string name="text_swipe_refresh">SwipeRefreshLayout</string>
    <string name="text_advance_time">定时任务</string>
    <string name="text_lambda">Lambda表达式</string>
    <string name="text_click">click</string>
    <string name="text_json_list">将Json对象转换为列表</string>
    <string name="text_json_object">将Json对象转换为对象</string>
    <string name="text_json_map">将Json对象转换为Map</string>
    <string name="text_json_gson">使用Gson处理json数据</string>
    <string name="text_object_to_json">将对象转为json字符串</string>
</resources>
